# LlamaTov

./: LICENSE-RTAAL-1.1.md  LICENSING.md  README.md
.github/: FUNDING.yml
bpd/: .gitignore  MILESTONE_110pct_0ULP.md  Makefile  bench_dp4a_coalesced.cu  bench_vecmat_reg  bench_vecmat_reg.cu  cfd_retire_dashboard.pl  decode_fact.py  dz2_autofit.py  dz2_render_v2.py  emit_shared_memory_diagram.pl  emit_threadblock_diagram.pl  generate_blas_kernels.pl  generate_cfd_kernels.pl  generate_fused_kernels.pl  generate_llama_kernels.pl  ieee754_hex.h  ieee754_hex.py  lift_coverage.html  lift_coverage.pl  llamatov_bench.pl  llamatov_c_inference.py  llamatov_gpu.py  llamatov_gpu_dp4a.py  llamatov_gpu_kvcache.py  llamatov_gpu_kvcache_dp4a.py  llamatov_gpu_llama.py  llamatov_gpu_resident.py  llamatov_inference.py  llamatov_kernels.cu  llamatov_llama.pl  llamatov_ref_dump.py  llamatov_ref_verify.py  llamatov_run.py  llamatov_v2.pl  llvm_match_detail.pl  llvm_match_status.html  llvm_match_status.pl  phase5_sweep_ast_isomorphism.pl  residual_cache_emit.pl  (+3 more)
bpd-substrate/: .gitignore  BLOG_30_LLAMATOV.md  CONTRIBUTING.md  LICENSE  LICENSE-RTAAL-1-0.md  Makefile  README.md  research_notes.md
bpd-substrate/.github/: FUNDING.yml
bpd-substrate/bench/: apply_eval_callback_patch.py  bench_L0_spec.py  bench_dequant_gpu_h2h.cu  bench_dequant_gpu_h2h.py  bench_fusion.py  bench_gpu_l1_perf.py  bench_gpu_sweep.py  bench_yolo_cbsa.py  bench_yolo_perf_report.py  bpd_cpu.c  (+102 more)
bpd/kernelgen/oxide-examples/rms_quant_oxide/: Cargo.toml
bpd/kernelgen/oxide-examples/rms_quant_oxide/src/: main.rs
(+846 files in other folders)
