# SPDX-License-Identifier: GPL-2.0-or-later OR LicenseRef-RTAAL-1.1
# Copyright (c) 2026 Heath Hunnicutt and the Ruach Tov collective.
[package]
name = "rms_quant_oxide"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates GEMM (matrix multiplication) in unified compilation.
# Build with:
#   cargo oxide run gemm

[dependencies]
# Device-side intrinsics (thread indexing, barriers, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

cuda-core = { path = "../../../cuda-core" }

half = "2"
